# SLAM_AR_Android

./: README.md  build.gradle
OpenCVLibrary450/: build.gradle
OpenCVLibrary450/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  JavaCameraView.java
OpenCVLibrary450/src/main/java/org/opencv/utils/: OpenCVConstants.java
app/: CMakeLists.bak  build.gradle
app/src/androidTest/java/com/martin/ads/slamar/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: CameraSettings.yaml
app/src/main/cpp/: CMakeLists.txt  Matrix.cpp  Plane.cpp  Plane.h  UIUtils.cpp  UIUtils.h  native-lib.cpp
app/src/main/cpp/orb-slam3/include/: SlamSystemNative.h
app/src/main/cpp/src/: SlamSystemNative.cpp
app/src/main/java/com/eqgis/slam/: DefaultCameraActivity.java
app/src/main/java/com/eqgis/slam/core/: SlamSystem.java  SlamSystemNative.java
app/src/main/java/com/martin/ads/rendering/gles/: GLSphere2DProgram.java  OrthoFilter.java
app/src/main/java/com/martin/ads/rendering/render/: ObjectRenderer.java
app/src/main/java/com/martin/ads/slamar/: NativeHelper.java
app/src/main/java/com/martin/ads/ui/: ArCamUIActivity.java  CameraGLView.java  ModelActivity.java  TestObjActivity.java
app/src/main/res/layout/: tutorial1_surface_view.xml
gradle/wrapper/: gradle-wrapper.properties
